--- a/cybercorpsys/src/app/modules/inventario/cotizacion/dialog-cotizacion/dialog-cotizacion.component.html
+++ b/cybercorpsys/src/app/modules/inventario/cotizacion/dialog-cotizacion/dialog-cotizacion.component.html
@@ -1,1 +1,83 @@
-<p>dialog-cotizacion works!</p>
+<div
+  class="modal fade"
+  id="modelId"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="modelTitleId"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title title">Seleccione los productos</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+
+      <div class="modal-body">
+        <mat-form-field appearance="standard">
+          <input
+            matInput
+            (keyup)="applyFilter($event)"
+            placeholder="Buscar..."
+            #input
+            class="form-control"
+            [autocomplete]="false"
+          />
+        </mat-form-field>
+        <table
+          class="table table-striped"
+          mat-table
+          [dataSource]="dataSource"
+          matSort
+        >
+          <!-- Position Column -->
+          <ng-container matColumnDef="opciones">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Opciones</th>
+            <td mat-cell *matCellDef="let element">
+              <button
+                [id]="element.id"
+                class="btn btn-success"
+                (click)="agregarProducto(element)"
+              >
+                <i class="fa fa-check"> </i>
+              </button>
+            </td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.nombre }}
+            </td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="cantidad">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Cantidad</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.cantidad }}
+            </td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Codigo</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.id }}
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+        </mat-paginator>
+      </div>
+    </div>
+  </div>
+</div>
