US-22-CAMBIO-MODELOS, renombrar los campos de todos los modelos

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -47,7 +47,7 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/inventario/proveedor']">
+              <a class="nav-link" [routerLink]="['/inventory/supplier']">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Proveedor</p>
               </a>
@@ -55,7 +55,7 @@
           </ul>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/inventario/producto']">
+              <a class="nav-link" [routerLink]="['/inventory/producto']">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Producto</p>
               </a>
@@ -63,7 +63,7 @@
           </ul>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/inventario/sede']">
+              <a class="nav-link" [routerLink]="['/inventory/sede']">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Sede</p>
               </a>
@@ -71,7 +71,7 @@
           </ul>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/inventario/cotizacion']">
+              <a class="nav-link" [routerLink]="['/inventory/cotizacion']">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Cotizacion</p>
               </a>
@@ -96,7 +96,7 @@
           </ul>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/inventario/producto']">
+              <a class="nav-link" [routerLink]="['/inventory/producto']">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Ingreso</p>
               </a>
@@ -113,7 +113,7 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/acceso/usuario']">
+              <a class="nav-link" [routerLink]="['/acceso/users']">
                 <i class="fa fa-users nav-icon"></i>
                 <p>Usuarios</p>
               </a>
