--- a/src/app/modules/home/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/home/pages/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
             <div class="icon">
               <i class="fas fa-shopping-cart"></i>
             </div>
-            <a [routerLink]="['/inventario/producto/']" class="small-box-footer"
+            <a [routerLink]="['/inventory/producto/']" class="small-box-footer"
               >Mas informacion <i class="fas fa-arrow-circle-right"></i
             ></a>
           </div>
@@ -44,7 +44,7 @@
             <div class="icon">
               <i class="fas fa-user-plus"></i>
             </div>
-            <a [routerLink]="['/inventario/proveedor']" class="small-box-footer">
+            <a [routerLink]="['/inventory/supplier']" class="small-box-footer">
               Mas informacion <i class="fas fa-arrow-circle-right"></i>
             </a>
           </div>
@@ -61,7 +61,7 @@
             <div class="icon">
               <i class="ion ion-stats-bars"></i>
             </div>
-            <a [routerLink]="['/inventario/sede']" class="small-box-footer">
+            <a [routerLink]="['/inventory/sede']" class="small-box-footer">
               Mas informacion <i class="fas fa-arrow-circle-right"></i>
             </a>
           </div>
