--- a/src/app/modules/inventario/proveedor/dialog-proveedor/dialog-proveedor.component.html
+++ b/src/app/modules/inventario/proveedor/dialog-proveedor/dialog-proveedor.component.html
@@ -16,7 +16,7 @@
         type="text"
         placeholder="Nombre"
         class="form-control"
-        formControlName="nombre"
+        formControlName="name"
       />
     </div>
     <div class="form-group">
@@ -25,7 +25,7 @@
         type="text"
         placeholder="Contacto"
         class="form-control"
-        formControlName="contacto"
+        formControlName="address"
       />
     </div>
     <div class="form-group">
@@ -34,7 +34,7 @@
         type="email"
         placeholder="ejemplo@gmail.com"
         class="form-control"
-        formControlName="correo"
+        formControlName="email_address"
       />
     </div>
     <div class="form-group">
@@ -43,7 +43,7 @@
         type="text"
         placeholder="Direccion"
         class="form-control"
-        formControlName="direccion"
+        formControlName="address"
       />
     </div>
     <div class="modal-footer">
