--- a/src/app/modules/inventario/proveedor/proveedor.component.html
+++ b/src/app/modules/inventario/proveedor/proveedor.component.html
@@ -41,59 +41,59 @@
                 <!-- Weight Column -->
 
                 <!-- Weight Column -->
-                <ng-container matColumnDef="nombre">
+                <ng-container matColumnDef="name">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Nombre
                   </th>
                   <td mat-cell *matCellDef="let element">
-                    {{ element.nombre }}
+                    {{ element.name }}
                   </td>
                 </ng-container>
 
                 <!-- Weight Column -->
-                <ng-container matColumnDef="contacto">
+                <ng-container matColumnDef="phone_number">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Contacto
                   </th>
                   <td mat-cell *matCellDef="let element">
-                    {{ element.contacto }}
+                    {{ element.phone_number }}
                   </td>
                 </ng-container>
 
                 <!-- Weight Column -->
-                <ng-container matColumnDef="correo">
+                <ng-container matColumnDef="email_address">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Correo
                   </th>
                   <td mat-cell *matCellDef="let element">
-                    {{ element.correo }}
+                    {{ element.email_address }}
                   </td>
                 </ng-container>
 
                 <!-- Weight Column -->
-                <ng-container matColumnDef="direccion">
+                <ng-container matColumnDef="address">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Direccion
                   </th>
                   <td mat-cell *matCellDef="let element">
-                    {{ element.direccion }}
+                    {{ element.address }}
                   </td>
                 </ng-container>
 
                 <!-- Weight Column -->
-                <ng-container matColumnDef="estado">
+                <ng-container matColumnDef="is_active">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     estado
                   </th>
                   <td mat-cell *matCellDef="let element">
                     <span
                       class="badge text-bg-success"
-                      *ngIf="element.estado == true"
+                      *ngIf="element.is_active == true"
                       >Activado</span
                     >
                     <span
                       class="badge text-bg-danger"
-                      *ngIf="element.estado == false"
+                      *ngIf="element.is_active == false"
                       >Desactivado</span
                     >
                   </td>
@@ -113,14 +113,14 @@
                     <button
                       (click)="modificarEstado(element.id, 0)"
                       class="btn btn-danger"
-                      *ngIf="element.estado == 1"
+                      *ngIf="element.is_active == 1"
                     >
                       <i class="fa fa-trash"> </i>
                     </button>
                     <button
                       (click)="modificarEstado(element.id, 1)"
                       class="btn btn-success"
-                      *ngIf="element.estado == 0"
+                      *ngIf="element.is_active == 0"
                     >
                       <i class="fa fa-check"> </i>
                     </button>
