--- a/src/app/modules/inventario/sede/dialog-sede/dialog-sede.component.html
+++ b/src/app/modules/inventario/sede/dialog-sede/dialog-sede.component.html
@@ -16,7 +16,7 @@
         type="text"
         placeholder="Nombre"
         class="form-control"
-        formControlName="nombre"
+        formControlName="name"
       />
     </div>
     <br />
