--- a/src/app/modules/inventario/sede/sede.component.html
+++ b/src/app/modules/inventario/sede/sede.component.html
@@ -48,24 +48,24 @@
                 </ng-container>
 
                 <!-- Name Column -->
-                <ng-container matColumnDef="nombre">
+                <ng-container matColumnDef="name">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Nombre
                   </th>
                   <td mat-cell *matCellDef="let element">
-                    {{ element.nombre }}
+                    {{ element.name }}
                   </td>
                 </ng-container>
 
                 <!-- Weight Column -->
-                <ng-container matColumnDef="estado">
+                <ng-container matColumnDef="is_active">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Estado
                   </th>
                   <td mat-cell *matCellDef="let element">
                     <span
                       class="badge text-bg-success"
-                      *ngIf="element.estado == true"
+                      *ngIf="element.is_active == true"
                       >Activado</span
                     >
                     <span
