--- a/src/app/modules/inventario/proveedor/dialog-proveedor/dialog-proveedor.component.html
+++ b/src/app/modules/inventario/proveedor/dialog-proveedor/dialog-proveedor.component.html
@@ -25,7 +25,7 @@
         type="text"
         placeholder="Contacto"
         class="form-control"
-        formControlName="address"
+        formControlName="phone_number"
       />
     </div>
     <div class="form-group">
@@ -50,9 +50,7 @@
       <button
         type="submit"
         class="btn btn-primary"
-        [disabled]="this.form.invalid"
-        [class.invalidado]="this.form.invalid"
-        [class.validado]="this.form.valid"
+
       >
         Guardar
       </button>
