--- a/src/app/modules/inventario/ventas/ventas.component.html
+++ b/src/app/modules/inventario/ventas/ventas.component.html
@@ -30,7 +30,7 @@
                 </ng-container>
 
                 <!-- Name Column -->
-                <ng-container matColumnDef="serial">
+                <ng-container matColumnDef="serial_number">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Serial
                   </th>
@@ -38,7 +38,7 @@
                     {{ element.serial_number }}
                   </td>
                 </ng-container>
-                <ng-container matColumnDef="precio">
+                <ng-container matColumnDef="price">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>
                         Precio
                     </th>
@@ -46,7 +46,7 @@
                       {{ element.price}}
                     </td>
                   </ng-container>
-                  <ng-container matColumnDef="precioVenta">
+                  <ng-container matColumnDef="buy_price">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>
                       Precio Venta
                     </th>
@@ -54,14 +54,14 @@
                       {{ element.buy_price }}
                     </td>
                   </ng-container>
-                  <ng-container matColumnDef="impuesto">
+                  <ng-container matColumnDef="sale_tax">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>
                       Impuesto
                     </th>
                     <td mat-cell *matCellDef="let element">
                       {{ element.sale_tax }}
                     </td>
-                  </ng-container><ng-container matColumnDef="total">
+                  </ng-container><ng-container matColumnDef="saleTotal">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>
                       Total
                     </th>
@@ -69,7 +69,7 @@
                       {{ element.saleTotal }}
                     </td>
                   </ng-container>
-                  <ng-container matColumnDef="fecha">
+                  <ng-container matColumnDef="date_created">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>
                       Fecha
                     </th>
@@ -87,7 +87,7 @@
                   </ng-container>
 
                 <!-- Weight Column -->
-                <ng-container matColumnDef="estado">
+                <ng-container matColumnDef="is_active">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Estado
                   </th>
