--- a/src/app/modules/inventario/ventas/ventas.component.html
+++ b/src/app/modules/inventario/ventas/ventas.component.html
@@ -108,7 +108,15 @@
                 <!-- Weight Column -->
                 <ng-container matColumnDef="opciones">
                   <th mat-header-cell *matHeaderCellDef>Acciones</th>
-                
+                  <td mat-cell *matCellDef="let element">
+                    <button
+                      (click)="modificarEstado(element.id, 0)"
+                      class="btn btn-danger"
+                      *ngIf="element.is_active == 1"
+                    >
+                      <i class="fa fa-trash"> </i>
+                    </button>
+                  </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
